# North-Star

./: .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  NOTICE  PX.md  README.md  requirements.txt  run_api_tests.ps1  run_api_tests.sh  run_isolation_proof.sh
Src/backend/: .env  .env.example  .env.local  __clear_kb_chunks.py  __count_kb_chunks.py  __inspect_db.py  __manual_store.py  __tmp_rag.py  api_test_output.txt  northstar.db  pyproject.toml  temp_inspect.py  temp_out_of_order.py  test.db  tmp_failed_detail.py  tmp_failed_jobs.py  tmp_get_max_ds.py  tmp_list_rq_keys.py  tmp_queue_len.py  tmp_rq_registry.py
Src/backend/app/: __init__.py  config.py  deps.py  logging_setup.py  main.py
Src/backend/app/adapters/: cerebras_planner.py  cerebras_responder.py  confluence_adapter.py  dense_bge.py  hybrid_retriever.py  jira_adapter.py  openai_planner.py  openai_responder.py  qdrant_client.py
Src/backend/docs/: AGENT_PUBLISH.md  CHANGELOG.md  E2E_HARNESS.md
Src/backend/northstar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Src/backend/samples/: PX.md  github_push.json
Src/backend/skill_tests/: test_skill_attribution.py
Src/backend/tests/: conftest.py  test_admin_rbac.py  test_agent_publish.py  test_atlassian_adapters.py  test_chat_orchestrator.py  test_contrastive_mapper.py  test_db_engine.py  test_ingestion_archives.py  test_ingestion_rbac.py  test_isolation_proof.py  test_onboarding_epic.py  test_planner_sanitization.py  test_publish_schemas.py  test_qdrant_retriever.py  test_retriever_router.py  test_run_e2e_utils.py  test_security.py  test_skill_attribution.py  test_skill_extractor.py  test_staff_routes.py
Src/backend/worker/: __init__.py  main.py  queue.py
(+451 files in other folders)
